spacing issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,7 +57,7 @@ header{
 
 #title{
   position: absolute;
-  top: 10%;
+  top: 9%;
   left: 20%;
 }
 
